--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,7 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+
              <% if @book.favorited_by?(current_user) %>
       <td>
       <%= link_to book_favorites_path(@book), method: :delete do %>
@@ -30,6 +31,7 @@
      <% end %>
      </td>
   <% end %>
+  <td>コメント数: <%= @book.post_comments.count %></td>
 
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -39,6 +41,8 @@
 
         </tr>
       </table>
+      <%= render "post_comments/index", book: @book %>
+      <%= render "post_comments/form", book: @book, post_comment: @post_comment %>
     </div>
   </div>
 </div>
